--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -10,9 +10,10 @@ Bind DN (-D)   : uid=admin,cn=users,cn=accounts,dc=ocp4,dc=example,dc=com
 URI (-H)       : ldaps://rhds.ocp4.example.com
 Bind password (-w) : redhatocp
 Connection Protocol : ldaps
-Email               : mail
+**Attributes**
+Email   : mail
 id      : dn
-name     : cn
+name    : cn
 ```
 Once LDAP configured, user 'kristendelgado' must able to login with password 	'redhat123'
 
