--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -15,8 +15,17 @@ Email   : mail
 id      : dn
 name    : cn
 ```
-Once LDAP configured, user 'kristendelgado' must able to login with password 	'redhat123'
+## Once LDAP configured, user 'kristendelgado' must able to login with password 	'redhat123'
+- You should use 'secret' for bind password with name 'ldap-bind-pass' in the 'openshift-config' namespace.
 
-- You should use 'secret' for bind password with name 'ldap-bind-pass'
-- You must use 'configmap' for the certificate.
+- You must use 'configmap' for the certificate with name 'ldap-ca-config' in the 'openshift-config' namespace.
+
+
 ---
+
+
+### Solution 
+
+```
+oc create configmap ldap-ca-config --from-file ca.crt=rhds_ca.crt -n openshift-config
+oc create secret generic ldap-bind-pass --from-literal bindPassword=redhatocp -n openshift-config
