--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -22,7 +22,15 @@ name    : cn
 
 
 ### Solution 
+# Login by admin user
+```
+oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
+```
 
+### Check the ConfigMap and Secret in the `openshift-config` namespace
+```
+oc -n openshift-config get cm,secret
+```
 ```
 oc -n openshift-config create configmap ldap-ca-config --from-file ca.crt=rhds_ca.crt 
 oc -n openshift-config create secret generic ldap-bind-pass --from-literal bindPassword=redhatocp 
