--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -26,7 +26,15 @@ name    : cn
 ```
 oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
 ```
-
+### Identify the URL for the OpenShift web console.
+```
+oc whoami --show-console
+```
+### For your references.
+```
+[student@workstation ~]$ oc whoami --show-console
+https://console-openshift-console.apps.ocp4.example.com
+```
 ### Check the ConfigMap and Secret in the `openshift-config` namespace
 ```
 oc -n openshift-config get cm,secret
@@ -35,3 +43,5 @@ oc -n openshift-config get cm,secret
 oc -n openshift-config create configmap ldap-ca-config --from-file ca.crt=rhds_ca.crt 
 oc -n openshift-config create secret generic ldap-bind-pass --from-literal bindPassword=redhatocp 
 ```
+### Open the web console by click on `Red Hat Identity Management` and log in as the `admin` user with the `redhatocp` password.
+### Click `Administration` → `Cluster Settings` from the sidebar menu and then Click the `Configuration` tab
