--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -6,8 +6,8 @@ lab start auth-ldap
 # You need to install and configure the LDAP 
 ```html
 Name:          : ANISH-ldap-ex380
-Bind DN (-D)   : uid=admin,cn=users,cn=accounts,dc=ocp4,dc=example,dc=com
-URI (-H)       : ldaps://rhds.ocp4.example.com
+Bind DN (-D)   : cn=Directory Manager
+URI (-H)       : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
 Bind password (-w) : redhatocp
 Connection Protocol : ldaps
 **Attributes**
