--- a/EX380/02-03 oadp.md
+++ b/EX380/02-03 oadp.md
@@ -2,6 +2,8 @@
 ```
 oc login -u admin -p redhatocp   https://api.ocp4.example.com:6443
 lab start backup-restore
+curl -o backup-db-manul.yaml https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/backup-db-manual-02-03.yml
+oc apply -f backup-db-manul.yaml 
 ```
 # Question: One 'database' application is suddenly crashed and the good news is that we have a backup. 
 # Your task is to restore the 'database' application and the restore name must be 'restore-database'
