--- a/EX380/02-03 oadp.md
+++ b/EX380/02-03 oadp.md
@@ -7,7 +7,9 @@ oc apply -f backup-db-manul.yaml
 ```
 # Question: One 'database' application is suddenly crashed and the good news is that we have a backup. 
 # Your task is to restore the 'database' application and the restore name must be 'restore-database'
-
+## You may download the restore file from below link.
+https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/restore.yaml
+---
 ## Solution:
 ```
 velero get backup db-manual
