--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -11,8 +11,7 @@ URI (-H)       : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
 Bind password (-w) : redhatocp
 Connection Protocol : ldaps
 
-<img width="612" height="612" alt="image" src="https://github.com/user-attachments/assets/e6f12a04-6361-48e9-ac09-3c289b8d8b07" />
- Attributes **
+** Attributes **
 Email   : mail
 id      : dn
 name    : cn
