--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -36,6 +36,13 @@ oc whoami --show-console
 [student@workstation ~]$ oc whoami --show-console
 https://console-openshift-console.apps.ocp4.example.com
 ```
+### Take the backup.
+
+```
+oc get oauth cluster -o yaml
+oc get oauth cluster -o yaml > oath.yaml
+```
+
 ### Check the ConfigMap and Secret in the `openshift-config` namespace
 ```
 oc -n openshift-config get cm,secret
@@ -46,3 +53,13 @@ oc -n openshift-config create secret generic ldap-bind-pass --from-literal bindP
 ```
 ### Open the web console by click on `Red Hat Identity Management` and log in as the `admin` user with the `redhatocp` password.
 ### Click `Administration` → `Cluster Settings` from the sidebar menu and then Click the `Configuration` tab
+
+
+
+### If required, you can fallback the changes. 
+```
+oc replace -f oauth.yaml
+```
+```
+watch oc get pods -n openshift-authentication
+```
