--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -1,15 +1,18 @@
-## Prepare the lab.
+<img width="468" height="35" alt="image" src="https://github.com/user-attachments/assets/cf8acc9c-1096-43df-8039-017b2f77fe71" />## Prepare the lab.
 ```
 lab start auth-ldap
 ```
 
 # You need to install and configure the LDAP 
 ```html
-Name:          : ANISH-ldap-ex380
-Bind DN (-D)   : cn=Directory Manager
-URI (-H)       : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
-Bind password (-w) : redhatocp
+Name:               : ANISH-ldap-ex380
+Bind DN (-D)        : cn=Directory Manager
+Base DN				      : cn=users, cn=accounts, dc=domain21, dc=example, dc=com
+Server Hostname     : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
+Bind password (-w)  : redhatocp
 Connection Protocol : ldaps
+Insecure				    :false
+
 
 ** Attributes **
 Email   : mail
