--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -11,10 +11,11 @@ Base DN				      : cn=users, cn=accounts, dc=domain21, dc=example, dc=com
 Server Hostname     : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
 Bind password (-w)  : redhatocp
 Connection Protocol : ldaps
-Insecure				    :false
+Insecure				    : false
+Mapping Method      :	claim
 
-
-** Attributes **
+Attributes  ⬅️ ⬅️ 👈👈👈👈
+------------------------
 Email   : mail
 id      : dn
 name    : cn
