--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -7,18 +7,19 @@ lab start auth-ldap
 ```html
 Name:               : ANISH-ldap-ex380
 Bind DN (-D)        : cn=Directory Manager
-Base DN				      : cn=users, cn=accounts, dc=domain21, dc=example, dc=com
+Base DN             : cn=users, cn=accounts, dc=domain21, dc=example, dc=com
 Server Hostname     : ldaps://rhds.ocp4.example.com/dc=example,dc=com?uid
 Bind password (-w)  : redhatocp
 Connection Protocol : ldaps
-Insecure				    : false
+Insecure            : false
 Mapping Method      :	claim
 
 Attributes  ⬅️ ⬅️ 👈👈👈👈
 ------------------------
+Preferred username : uid
 Email   : mail
-id      : dn
-name    : cn
+ID      : dn
+Name    : cn
 ```
 ## Once LDAP configured, user `kristendelgado` must able to login with password `redhat123`
 - You should use 'secret' for `bind password` with name `ldap-bind-pass` in the `openshift-config` namespace.
