--- a/EX380/01-03 LDAP.md
+++ b/EX380/01-03 LDAP.md
@@ -24,6 +24,8 @@ Name    : cn
 ## Once LDAP configured, user `kristendelgado` must able to login with password `redhat123`
 - You should use 'secret' for `bind password` with name `ldap-bind-pass` in the `openshift-config` namespace.
 - You must use 'configmap' for the `certificate` with name `ldap-ca-config` in the `openshift-config` namespace.
+## You can download the certificate from below URL.
+https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/rhds_ca.crt-01-03.crt
 ---
 
 
