--- a/EX380/02-03 oadp.md
+++ b/EX380/02-03 oadp.md
@@ -5,8 +5,8 @@ lab start backup-restore
 curl -o backup-db-manul.yaml https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/backup-db-manual-02-03.yml
 oc apply -f backup-db-manul.yaml 
 ```
-# Question: One 'database' application is suddenly crashed and the good news is that we have a backup. 
-# Your task is to restore the 'database' application and the restore name must be 'restore-database'
+# Question: One customer database application is suddenly crashed and the good news is that we have a backup. 
+# Your task is to restore the failed application and the restore name must be 'restore-app'
 ## You may download the restore file from below link.
 https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/restore.yaml
 ---
@@ -17,9 +17,9 @@ velero get backup db-manual -o yaml | grep -i namespace -A 3
 vi restore-db-crash.yml 
 oc apply -f restore-db-crash.yml 
 velero get restore
-velero describe restore restore-database-project
+velero describe restore restore-app
 velero get restore
-velero describe restore restore-database-project --details
+velero describe restore restore-app --details
 
 oc project database 
 ```
